--- a/AtleticaEcoUff/AtleticaEcoUff.csproj
+++ b/AtleticaEcoUff/AtleticaEcoUff.csproj
@@ -215,6 +215,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\atletica.png" />
+    <Content Include="Content\bateria.jpg" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
