--- a/AtleticaEcoUff/Web.config
+++ b/AtleticaEcoUff/Web.config
@@ -17,6 +17,14 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+  
+    <!--OAuth keys-->
+    <add key="MicrosoftClientId" value="c26ea0d9-a62a-4d25-b036-ddca09073c31" />
+    <add key="MicrosoftClientSecret" value="wabZSDL@![umkrBUV08613_" /> 
+    <add key="FacebookClientId" value="207299746830221" />
+    <add key="FacebookClientSecret" value="6c2c370ce32dfef6814bee817003c9ae" />
+    <add key="GoogleClientId" value="395615254220-2j80cqnimo2dfhaudniab9i5bj3o0vmh.apps.googleusercontent.com" />
+    <add key="GoogleClientSecret" value="STm6WmJ3GHjaeBgd7ldj64R8" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
